--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-router/node": "^7.1.1",
     "@react-router/serve": "^7.1.1",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.469.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.1"
